[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dioxus = { version = "0.2.4", features = ["web", "router"] }
dioxus-html-macro = "0.2.0"
dioxus_markdown = { git = "https://github.com/DioxusLabs/markdown", version = "0.1.0" }
gloo-net = "0.2.5"
js-sys = "0.3.60"
serde = { version = "1.0.149", features = ["derive"] }
sha2 = "0.10.6"
url = "2.3.1"
web-sys = { version = "0.3.60", features = ["console"] }
