[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dioxus_markdown = { git = "https://github.com/justanotherbyte/markdown" }
gloo-net = "0.2.5"
js-sys = "0.3.60"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
sha2 = "0.10.6"
url = "2.3.1"
getrandom = { version = "0.2", features = ["js"] }
dioxus = "0.3.2"
dioxus-web = "0.3.2"
dioxus-router = { version =  "0.3.0", features = ["web"] }
serde_json = "1.0.96"
wasm-bindgen = "0.2.86"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "console",
    "Window",
    "ScrollToOptions",
    "MutationObserver",
    "Navigator",
    "Element",
    "HtmlTextAreaElement",
    "Storage"
]